# basic-cpp-project

./: CMakeLists.txt
extra/gflags/osx/lib/: libgflags.dylib  libgflags_nothreads.2.2.0.dylib
include/: log.h
src/: main.cpp
test/: main_test.cpp
